--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
             font-family: 'Arial', sans-serif;
             background-color: #121212;
             /* Carlson Gracie Logo Background */
-            background-image: linear-gradient(rgba(0,0,0,0.85), rgba(0,0,0,0.85)), url('https://upload.wikimedia.org/wikipedia/en/2/25/Carlson_Gracie_Team_Logo.jpg');
+            background-image:linear-gradient(rgba(0,0,0,0.85), rgba(0,0,0,0.85)), url('images (1).png');
+
             background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
