--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
             font-family: 'Arial', sans-serif;
             background-color: #121212;
             /* Carlson Gracie Logo Background */
-            background-image:linear-gradient(rgba(0,0,0,0.85), rgba(0,0,0,0.85)), url('images (1).png');
-
+            background-image: linear-gradient(rgba(0,0,0,0.85), rgba(0,0,0,0.85)), url('logo.png');
             background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
