--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: 'Arial', sans-serif;
             background-color: #121212;
             /* BACKGROUND IMAGE */
-            background-image: linear-gradient(rgba(0,0,0,0.85), rgba(0,0,0,0.85)), url('1371.png');
+            background-image: linear-gradient(rgba(0,0,0,0.85), rgba(0,0,0,0.85)), url('logo.png');
             background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
