--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #000000; /* Safety Black Background */
+            background-color: #000000;
             color: white;
             text-align: center;
             display: flex;
@@ -17,7 +17,10 @@
             min-height: 100vh;
             margin: 0;
             touch-action: manipulation;
-            /* Background Image Configuration */
+            /* COMMAND TO HIDE THE MOUSE CURSOR: */
+            cursor: none; 
+            
+            /* Background Image */
             background-image: linear-gradient(rgba(0,0,0,0.85), rgba(0,0,0,0.85)), url('logo.png');
             background-size: contain;
             background-position: center;
@@ -30,7 +33,6 @@
             font-weight: bold; 
             line-height: 1; 
             text-shadow: 4px 4px 8px rgba(0,0,0,0.8);
-            cursor: pointer;
             margin-bottom: 20px;
         }
         
@@ -52,7 +54,7 @@
             padding: 10px;
             border: 3px solid transparent; 
             border-radius: 10px;
-            background-color: rgba(0,0,0,0.5); /* Semi-transparent backing */
+            background-color: rgba(0,0,0,0.5); 
         }
 
         .selected {
